add langchain to python image

--- a/python_dev_container/Containerfile
+++ b/python_dev_container/Containerfile
@@ -10,6 +10,7 @@ EXPOSE 80
 RUN yum install python3-pip -y
 RUN yum install python-devel -y
 RUN yum install python3.8 -y
+RUN pip install langchain
 COPY install_ollama.sh /opt/
 WORKDIR /opt
 RUN ./install_ollama.sh
